   now push an error message indicating that a required callback was
   called but not supplied.
   https://rt.cpan.org/Ticket/Display.html?id=76782

 - clarify which callbacks are required for reading and writing TIFF
   images.

 - improve logging for creation of callback I/O layers.

 - a little more documentation for Imager::Probe.

Imager 0.89 - 18 Mar 2012
===========

Bug fixes:

 - getpixel(..., type => "float") and the API i_gpixf() have been
   broken on paletted images since they were implemented.
   https://rt.cpan.org/Ticket/Display.html?id=75258

Other changes:

 - links in the METHOD INDEX now point at the method documentation
   rather than the heading you can find them under.
   https://rt.cpan.org/Ticket/Display.html?id=71495

 - Imager (and the bundled dynamic modules) no longer fallback to
   using DynaLoader if loading via XSLoader fails.
   For the bundled modules this could hide useful error messages.
   https://rt.cpan.org/Ticket/Display.html?id=75560

 - IM_DEBUG_MALLOC mymalloc() no longer sn?printfs() a string to a
   buffer in the array of allocations, but just stores the filename
   pointer and line number.
   https://rt.cpan.org/Ticket/Display.html?id=70388

Imager 0.88 - 22 Feb 2012
===========

 - describe how to build libgif etc on OS X in such a way as to be
   compatible with a fat binary perl (such as the system perl), in
   README.
   https://rt.cpan.org/Ticket/Display.html?id=73371

 - update the change notes for 0.77_01 to indicate that libungif
   support was removed.

 - add some other imaging modules to SEE ALSO
   https://rt.cpan.org/Ticket/Display.html?id=73906

 - note that the generator of the apparently non-DFSG-free postscript
   in MMOne.pfb is a Debian package.

 - setsamples() is now a true complement to getsamples() - it can
   write 8-bit or floating point samples from a scalar or array
   reference.  This adds i_psamp() and i_psampf() to the C level API.
